# book

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
apps/book/: admin.py  apps.py  cache.py  filters.py  models.py  pagination.py  serializers.py  signals.py  tasks.py  throttling.py  urls.py  views.py
apps/book/management/commands/: create_book.py
apps/book/migrations/: 0001_initial.py
apps/book/tests/: test_views.py
apps/user/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/user/management/commands/: create_user.py
apps/user/migrations/: 0001_initial.py
apps/user/tests/: factories.py
config/: celery.py  settings.py  test.py  urls.py
dj-chart/: Chart.yaml  values.yaml
dj-chart/templates/: _helpers.tpl
dj-chart/templates/api/: deployment.yaml  ingress.yaml  service.yaml
dj-chart/templates/beat/: deployment.yaml
dj-chart/templates/config/: configmap.yaml  secret.yaml
dj-chart/templates/worker/: deployment.yaml
mychart/: Chart.yaml  values.yaml
mychart/config/: configmap.yaml  secret.yaml
mychart/templates/api/: deployment.yaml  ingress.yaml  service.yaml
mychart/templates/beat/: deployment.yaml
mychart/templates/worker/: deployment.yaml
scripts/: run_beat.sh  run_pod.sh  run_worker.sh
